--- a/homework.ipynb
+++ b/homework.ipynb
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "cP4rScqMGuze"
       },
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "S73zAB2vxDZs"
       },
@@ -125,7 +125,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = ..."
+        "p1 = len(q1)"
       ]
     },
     {
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "KQiLAQuKW9Ce"
       },
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "2tXbdHcbXS_7"
       },
@@ -172,14 +172,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p2 = ..."
+        "p2 = len(q2.split(sep=','))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2"
       ]
@@ -197,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "1CUU_Td7DdnH"
       },
@@ -206,23 +217,48 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(joke):\n",
-        "    ..."
+        "    if \"silly\" in joke and len(joke) >= 50:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False    "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this is a silly joke\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this joke is so boring because it drones on and on and on and on forever as if noone is really reading this amirite?\")"
       ]
@@ -341,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "iezT1WYDGclf"
       },
@@ -354,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "K0KoZch7Gp1w"
       },
@@ -362,14 +398,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p5 = ..."
+        "p5 = q5.replace(\"jumped over\", \"greeted\").replace(\"lazy\", \"friendly\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'The quick brown fox greeted the friendly brown dog.'"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p5"
       ]
@@ -1196,7 +1243,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
