with additional fixes

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -292,7 +292,7 @@
               "129412"
             ]
           },
-          "execution_count": null,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -303,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -315,14 +315,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'🦄'"
             ]
           },
-          "execution_count": null,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -344,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "8onkYe3bEFmd"
       },
@@ -352,14 +349,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = ..."
+        "p4 = chr(128200) + chr(128201) + chr(128202)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'📈📉📊'"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p4"
       ]
@@ -436,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "PhrfDMbyMnc1"
       },
@@ -445,23 +453,60 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p6(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        def parse_line(line):\n",
+        "            return line.rstrip(\"\\n\").split(\"\\t\")\n",
+        " \n",
+        "        header = parse_line(next(fp))\n",
+        "        for line in fp:\n",
+        "            line = parse_line(line)\n",
+        "            if type(line) == int:\n",
+        "                yield dict(zip(header, line))\n",
+        "            else:\n",
+        "                yield dict(zip(header, None))\n",
+        "            "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'NoneType' object is not iterable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mp6\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata6_a.tsv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mp6\u001b[39m\u001b[34m(filename)\u001b[39m\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mzip\u001b[39m(header, line))\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28;43mzip\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mheader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m)\n",
+            "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not iterable"
+          ]
+        }
+      ],
       "source": [
         "list(p6(\"data6_a.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'NoneType' object is not iterable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mp6\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata6_b.tsv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mp6\u001b[39m\u001b[34m(filename)\u001b[39m\n\u001b[32m     10\u001b[39m line = parse_line(line)\n\u001b[32m     11\u001b[39m value = line \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(line) == \u001b[38;5;28mint\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28;43mzip\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mheader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m)\n",
+            "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not iterable"
+          ]
+        }
+      ],
       "source": [
         "list(p6(\"data6_b.tsv\"))"
       ]
@@ -670,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "sGqg9EJ5H-8V"
       },
@@ -678,16 +723,33 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
+        "import csv\n",
         "def p10(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        csv.reader(fp)\n",
+        "        csv.get_dialect()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "get_dialect() missing required argument 'name' (pos 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp10\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata10_a.tsv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mp10\u001b[39m\u001b[34m(filename)\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[32m      6\u001b[39m     csv.reader(fp)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[43mcsv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_dialect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[31mTypeError\u001b[39m: get_dialect() missing required argument 'name' (pos 1)"
+          ]
+        }
+      ],
       "source": [
+        "\n",
         "p10(\"data10_a.tsv\")"
       ]
     },
@@ -718,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "5ymdKizuY1Jd"
       },
@@ -732,7 +794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "8bibT3VpZEKq"
       },
@@ -740,16 +802,27 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p11 = f\"Number of visits = {q11a}, average visit revenue = {q11b}\""
+        "p11 = f\"Number of visits = {q11a:,d}, average visit revenue = {q11b:.2f}\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "QENJ6s5lZMpg"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Number of visits = 5,125, average visit revenue = 3.51'"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p11"
       ]
@@ -815,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "fMqaF4brQhrq"
       },
@@ -823,24 +896,51 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
+        "import csv\n",
         "def p13(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        reader = csv.reader(fp)\n",
+        "        header = next(reader)\n",
+        "\n",
+        "        return [column for column in header]\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['foo', 'bar']"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p13(\"data13_a.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['foo', 'bar']"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p13(\"data13_b.csv\")"
       ]
@@ -863,46 +963,104 @@
       "metadata": {
         "id": "1vo-ODsBPSW1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (2244764836.py, line 6)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreturn [row[column_name] for row in reader if row[column_name] in row else KeyError]\u001b[39m\n                                                                          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p14(filename, column_name):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        reader = csv.DictReader(fp)\n",
+        "        if column_name not in reader.fieldnames:\n",
+        "            raise KeyError(f\"Column '{column_name}' not found in the CSV file.\")\n",
+        "\n",
+        "        return [row[column_name] for row in reader]\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "KeyError"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14(\"data14_a.csv\", \"foo\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14(\"data14_a.csv\", \"bar\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14(\"data14_b.csv\", \"foo\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14(\"data14_b.csv\", \"bar\")"
       ]
